2009-08-11  Stefan Potyra <stefan.potyra@informatik.uni-erlangen.de>

	* Honor tab as IFS whitespace when splitting fields in readcmd.

2009-06-27  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix quoted pattern patch breakage.

2009-05-23  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix incorrect savefd conversions.

2009-02-22  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix dowait signal race.
	* Remove EXSIG.
	* Do not close stderr when /dev/tty fails to open.
	* Allow newlines after var name in for statements.
	* Use CHKNL to parse case statements.

2009-02-22  Gerrit Pape <pape@smarden.org>

	* Update manual page to differentiate dash from ash.

2009-01-14  Herbert Xu <herbert@gondor.apana.org.au>

	* Add arith_yacc.h to dash_SOURCES.
	* Release 0.5.5.1.

2009-01-13  Herbert Xu <herbert@gondor.apana.org.au>

	* Release 0.5.5.

2009-01-13  Mark Mentovai <mmentovai@gmail.com>

	* Fixed build on OS X.

2008-12-26  Aleksey Cheusov <vle@gmx.net>

	* Fixed build on NetBSD.

2008-10-17  Herbert Xu <herbert@gondor.apana.org.au>

	* Removed obsolete for loop syntax in manual.

2008-08-05  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed getcwd build error for the non-glibc case.

2008-06-13  Gerrit Pape <pape@smarden.org>

	* Added missing right parenthesis in manual page.

2008-06-13  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed 3,4-argument cases for test per POSIX.
	* Made aexpr/oexpr non-recursive.
	* Made t_lex reentrant.
	* Made setinputfd static.
	* Expand ENV before using it.
	* Added support for -l.

2008-05-19  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed non-leading slash treatment in expmeta.

2008-05-07  Gerrit Pape <pape@smarden.org>

	* Fixed lexical error in arithmetic expansion of & and |.

2008-05-03  Dan McGee <dpmcgee@gmail.com>

	* Fixed klibc/klcc build problems.
	* Added gitignore.

2008-05-03  Herbert Xu <herbert@gondor.apana.org.au>

	* Fixed _PATH_BSHELL warning.
	* Test __GLIBC__ instead of _GNU_SOURCE.